--- a/dl4se-website/src/assets/styles/bootstrap-override.css
+++ b/dl4se-website/src/assets/styles/bootstrap-override.css
@@ -16,6 +16,10 @@
     background-color: #495057 !important;
 }
 
+.custom-control-input:checked:hover~.custom-control-label::before {
+    background-color: #343a40 !important;
+}
+
 .custom-control-input:active~.custom-control-label::before {
     border-color: #495057 !important;
     background-color: #495057 !important;
