--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -21,14 +21,26 @@ input:focus, .form-control:focus
 .bg-light-gray
   background-color: $light-gray
 
+@mixin bg-chevron-down($fill-hash)
+  $fill-value: str-slice(#{$fill-hash}, 2)
+  $svg-value: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23"+$fill-value+"' class='bi bi-chevron-down' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E"
+  background-image: url($svg-value)
+
 .dropdown-toggle-btn
   min-width: 120px
-  max-width: 100%
+  padding-right: calc(1.5em + 0.75rem)
+  background-position: right calc(0.375em + 0.1875rem) center
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem)
+  background-repeat: no-repeat
+  @include bg-chevron-down($normal-gray)
   @extend .text-left
   @extend .border-left-0
   @extend .border-top-0
   @extend .border-right-0
   @extend .rounded-0
+
+.dropdown-toggle-btn:hover, .show > .dropdown-toggle
+  @include bg-chevron-down($white)
 
 .action-btn
   @extend .btn
