Improved size styling for dropdown/input using mixins

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -26,21 +26,13 @@ input:focus, .form-control:focus
   $svg-value: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23"+$fill-value+"' class='bi bi-chevron-down' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E"
   background-image: url($svg-value)
 
-.dropdown-toggle-btn
-  min-width: 120px
-  padding-right: calc(1.5em + 0.75rem)
-  background-position: right calc(0.375em + 0.1875rem) center
-  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem)
-  background-repeat: no-repeat
-  @include bg-chevron-down($normal-gray)
-  @extend .text-left
-  @extend .border-left-0
-  @extend .border-top-0
-  @extend .border-right-0
-  @extend .rounded-0
+@mixin fixed-width($pixels)
+  min-width: $pixels+px!important
+  max-width: $pixels+px!important
 
-.dropdown-toggle-btn:hover, .show > .dropdown-toggle
-  @include bg-chevron-down($white)
+@mixin fixed-height($pixels)
+  min-height: $pixels+px!important
+  max-height: $pixels+px!important
 
 .action-btn
   @extend .btn
@@ -78,6 +70,23 @@ input:focus, .form-control:focus
   color: white
   background-color: $normal-gray
 
+.dropdown-toggle-btn
+  @include fixed-width(120)
+  @include fixed-height(42)
+  padding-right: calc(1.5em + 0.75rem)
+  background-position: right calc(0.375em + 0.1875rem) center
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem)
+  background-repeat: no-repeat
+  @include bg-chevron-down($normal-gray)
+  @extend .text-left
+  @extend .border-left-0
+  @extend .border-top-0
+  @extend .border-right-0
+  @extend .rounded-0
+
+.dropdown-toggle-btn:hover, .show > .dropdown-toggle
+  @include bg-chevron-down($white)
+
 .dropdown-item:active, .dropdown-item.active
   color: white
   background-color: $normal-gray
@@ -95,3 +104,8 @@ input:focus, .form-control:focus
   @extend .border-left-0
   @extend .border-top-0
   @extend .border-right-0
+
+.text-input-field-sm
+  @include fixed-width(100)
+  @include fixed-height(42)
+  @extend .text-input-field
