--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -1,4 +1,5 @@
 @import 'node_modules/bootstrap/scss/bootstrap'
+@import "@/assets/styles/mixins.sass"
 
 $light-gray: #e6e6e6
 $normal-gray: #6c757d
@@ -20,19 +21,6 @@ input:focus, .form-control:focus
 
 .bg-light-gray
   background-color: $light-gray
-
-@mixin bg-chevron-down($fill-hash)
-  $fill-value: str-slice(#{$fill-hash}, 2)
-  $svg-value: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23"+$fill-value+"' class='bi bi-chevron-down' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E"
-  background-image: url($svg-value)
-
-@mixin fixed-width($pixels)
-  min-width: $pixels+px!important
-  max-width: $pixels+px!important
-
-@mixin fixed-height($pixels)
-  min-height: $pixels+px!important
-  max-height: $pixels+px!important
 
 .action-btn
   @extend .btn
