CSS fix for counter button focus

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -38,6 +38,9 @@ input:focus, .form-control:focus
   @extend .btn-outline-secondary
   @extend .rounded-0
 
+.counter-btn:focus, .counter-btn.focus
+  z-index: 1
+
 .counter-btn-top
   @extend .counter-btn
   @extend .border-0
