Fixed buggy behaviour of counter button focus

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -41,6 +41,9 @@ input:focus, .form-control:focus
 .counter-btn:focus, .counter-btn.focus
   z-index: 1
 
+.counter-btn:focus:not(:hover), .counter-btn.focus:not(:hover)
+  @extend .bg-light-gray
+
 .counter-btn-top
   @extend .counter-btn
   @extend .border-0
