Replacing `white` with `$white`

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -86,7 +86,7 @@ input:focus, .form-control:focus
   background-color: $light-gray
 
 .dropdown-toggle:hover
-  color: white
+  color: $white
   background-color: $normal-gray
 
 .dropdown-toggle-btn
@@ -107,7 +107,7 @@ input:focus, .form-control:focus
   @include bg-chevron-down($white)
 
 .dropdown-item:active, .dropdown-item.active
-  color: white
+  color: $white
   background-color: $normal-gray
 
 .input-group-btn-vertical
