--- a/dl4se-website/src/assets/styles/component/_counter.sass
+++ b/dl4se-website/src/assets/styles/component/_counter.sass
@@ -57,14 +57,14 @@
   @extend .counter-btn-chevron
   @include bg-chevron-up($normal-gray)
 
-.counter-btn-chevron-up:hover
+.counter-btn-chevron-up:hover, .counter-btn-chevron-up:active
   @include bg-chevron-up($white)
 
 .counter-btn-chevron-down
   @extend .counter-btn-chevron
   @include bg-chevron-down($normal-gray)
 
-.counter-btn-chevron-down:hover
+.counter-btn-chevron-down:hover, .counter-btn-chevron-down:active
   @include bg-chevron-down($white)
 
 .counter-label
