--- a/dl4se-website/src/assets/styles/component/_counter.sass
+++ b/dl4se-website/src/assets/styles/component/_counter.sass
@@ -20,7 +20,7 @@
   @extend .text-nowrap
   @extend .align-middle
 
-.counter-btn
+%counter-btn
   @include fixed-width(20)
   @include fixed-height(20)
   @extend .btn
@@ -31,37 +31,37 @@
   @extend .d-block
   @extend .float-none
 
-.counter-btn:focus, .counter-btn.focus
+%counter-btn:focus, %counter-btn.focus
   z-index: 1
 
-.counter-btn:focus:not(:hover), .counter-btn.focus:not(:hover)
+%counter-btn:focus:not(:hover), %counter-btn.focus:not(:hover)
   @extend .bg-light-gray
 
 .counter-btn-top
-  @extend .counter-btn
+  @extend %counter-btn
   @extend .border-0
 
 .counter-btn-bottom
-  @extend .counter-btn
+  @extend %counter-btn
   @extend .border-secondary
   @extend .border-left-0
   @extend .border-top-0
   @extend .border-right-0
 
-.counter-btn-chevron
+%counter-btn-chevron
   background-repeat: no-repeat
   background-position: center
   background-size: 65%
 
 .counter-btn-chevron-up
-  @extend .counter-btn-chevron
+  @extend %counter-btn-chevron
   @include bg-chevron-up($normal-gray)
 
 .counter-btn-chevron-up:hover, .counter-btn-chevron-up:active
   @include bg-chevron-up($white)
 
 .counter-btn-chevron-down
-  @extend .counter-btn-chevron
+  @extend %counter-btn-chevron
   @include bg-chevron-down($normal-gray)
 
 .counter-btn-chevron-down:hover, .counter-btn-chevron-down:active
