Moved card stack rule to the dedicated SASS file

--- a/dl4se-website/src/assets/styles/override/_card.sass
+++ b/dl4se-website/src/assets/styles/override/_card.sass
@@ -1,2 +1,9 @@
 .card-background
   background-color: #f2f2f2ee
+
+.card-stack
+  @extend .m-5
+  @extend .d-flex
+  @extend .flex-wrap
+  @extend .flex-column
+  @extend .align-content-center
