Added adaptive sizing to `TextInputForm`
This makes the input sizes adequate for both desktop and mobile devices

--- a/dl4se-website/src/assets/styles/component/_text-input-form.sass
+++ b/dl4se-website/src/assets/styles/component/_text-input-form.sass
@@ -1,5 +1,9 @@
 .text-input-group
-  @extend .w-25
+  @extend .col-xl-3
+  @extend .col-lg-3
+  @extend .col-md-4
+  @extend .col-sm-4
+  @extend .col-12
   @extend .mx-auto
   @extend .text-left
 
