Added `important` to border definitions

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -27,7 +27,7 @@ body
 
 @each $size in 2, 3, 4, 5
   .border-#{$size}
-    border-width: $size+px
+    border-width: $size+px!important
 
 .bg-light-gray
   background-color: $light-gray
