Changed scroll bar to be similar to the one in GHS

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -2,5 +2,6 @@
 @import "override/custom-control-input"
 @import "override/dropdown"
 @import "override/input"
+@import "override/scroll"
 @import "override/validation"
 @import "override/vue"
