--- a/dl4se-website/src/assets/styles/component/_range.sass
+++ b/dl4se-website/src/assets/styles/component/_range.sass
@@ -1,5 +1,6 @@
 .range
-  @extend .d-inline-flex
+  @extend .d-flex
+  @extend .flex-wrap
   @extend .position-relative
   @extend .align-items-center
 
