Added missing CSS selector for the dropdown toggle BG when `disabled`

--- a/dl4se-website/src/assets/styles/override/_dropdown.sass
+++ b/dl4se-website/src/assets/styles/override/_dropdown.sass
@@ -20,7 +20,7 @@
   @extend .border-right-0
   @extend .rounded-0
 
-.dropdown-toggle-btn:hover, .show > .dropdown-toggle
+.dropdown-toggle-btn:hover, .dropdown-toggle-btn.disabled, .show > .dropdown-toggle
   @include bg-chevron-down($white)
 
 .dropdown-item:active, .dropdown-item.active
