Changed dropdown width to be 100% of the parent element
This way, it scales far better in the responsive webpage, and it does
not require any alignment specifications

--- a/dl4se-website/src/assets/styles/override/_dropdown.sass
+++ b/dl4se-website/src/assets/styles/override/_dropdown.sass
@@ -1,3 +1,6 @@
+.dropdown
+  width: 100%!important
+
 .dropdown-toggle, .dropdown-toggle:focus
   color: $normal-gray
   background-color: $light-gray
@@ -7,7 +10,6 @@
   background-color: $normal-gray
 
 .dropdown-toggle-btn
-  @include fixed-width(120)
   @include fixed-height(40)
   padding-right: calc(1.5em + 0.75rem)
   background-position: right calc(0.375em + 0.1875rem) center
