`DropdownSelect` menu now inherits width from parent

--- a/dl4se-website/src/assets/styles/override/_dropdown.sass
+++ b/dl4se-website/src/assets/styles/override/_dropdown.sass
@@ -1,6 +1,10 @@
 .dropdown
   width: 100%!important
 
+.dropdown-menu
+  width: inherit!important
+  border-radius: 0!important
+
 .dropdown-toggle, .dropdown-toggle:focus
   color: $normal-gray
   background-color: $light-gray
