--- a/dl4se-website/src/assets/styles/component/_text-input-form.sass
+++ b/dl4se-website/src/assets/styles/component/_text-input-form.sass
@@ -1,3 +1,10 @@
+.text-input-form
+  @extend .text-center
+  @extend .m-lg-5
+  @extend .m-md-4
+  @extend .m-sm-3
+  @extend .m-3
+
 .text-input-group
   @extend .col-xl-2
   @extend .col-lg-3
