--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -40,4 +40,22 @@ body
 
 .page-title
   @extend .text-center
-  @extend .m-5
+  @extend .m-lg-5
+  @extend .m-md-4
+  @extend .m-sm-3
+  @extend .m-3
+
+.page-description
+  @extend .m-lg-5
+  @extend .m-md-4
+  @extend .m-sm-3
+  @extend .m-3
+  @extend .px-lg-5
+  @extend .px-md-4
+  @extend .px-sm-3
+  @extend .px-3
+
+.logo-image
+  @extend .my-md-5
+  @extend .my-sm-3
+  @extend .my-0
