Added `DialogPage`, which will be used by `Verify` and `NotFound` views

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,4 +1,5 @@
 @import "component/counter"
+@import "component/dialog"
 @import "component/range"
 @import "component/task"
 @import "component/text-input-form"
