Removed the `focus` shadows from `Counter` buttons
Even though they are still mouse focusable, this is no longer visually
communicated. This was done mainly to hide the god awful clipping of the
outline shadow when focusing. It would crop under the neighboring
elements.

--- a/dl4se-website/src/assets/styles/component/_counter.sass
+++ b/dl4se-website/src/assets/styles/component/_counter.sass
@@ -24,6 +24,7 @@
   @include fixed-width(20)
   @include fixed-height(20)
   @extend .btn
+  @extend .shadow-none
   @extend .p-0
   @extend .bg-light-gray
   @extend .btn-outline-secondary
