Extracted some selector to an `%input` shadow class

--- a/dl4se-website/src/assets/styles/component/_counter.sass
+++ b/dl4se-website/src/assets/styles/component/_counter.sass
@@ -6,14 +6,8 @@
 .counter-input
   @include fixed-width(100)
   @include fixed-height(40)
+  @extend %input
   @extend .z-index-2
-  @extend .form-control
-  @extend .bg-light-gray
-  @extend .rounded-0
-  @extend .border-secondary
-  @extend .border-left-0
-  @extend .border-top-0
-  @extend .border-right-0
 
 .counter-btn-group
   @extend .position-relative
