--- a/dl4se-website/src/assets/styles/override/_input.sass
+++ b/dl4se-website/src/assets/styles/override/_input.sass
@@ -8,3 +8,12 @@ input[type=number]
 
 input:focus, .form-control:focus
   box-shadow: 0 0 0 0.2rem rgb(108 117 125 / 50%)
+
+%input
+  @extend .form-control
+  @extend .bg-light-gray
+  @extend .rounded-0
+  @extend .border-secondary
+  @extend .border-left-0
+  @extend .border-top-0
+  @extend .border-right-0
