Added `Masking` component

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,5 +1,6 @@
 @import "component/counter"
 @import "component/dialog"
+@import "component/masking"
 @import "component/range"
 @import "component/task"
 @import "component/text-input-form"
