Better alignment for `Masking` inputs on mobile viewports

--- a/dl4se-website/src/assets/styles/component/_masking.sass
+++ b/dl4se-website/src/assets/styles/component/_masking.sass
@@ -3,10 +3,16 @@
   @extend .flex-wrap
   @extend .align-items-center
 
+.masking-pad
+  @extend .h-100
+  @extend .d-md-none
+  padding-left: 3px
+  padding-right: 3px
+
 .masking-counter-input
   @include fixed-width(75)
 
 .masking-token-input
   @extend %input
-  @include fixed-width(100)
+  @include fixed-width(95)
   @include fixed-height(40)
