Preliminary implementation of `TagSelect` component

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,4 +1,5 @@
 @import "component/counter"
+@import "component/tag-select"
 @import "component/dialog"
 @import "component/masking"
 @import "component/range"
