--- a/dl4se-website/src/assets/styles/component/_tag-select.sass
+++ b/dl4se-website/src/assets/styles/component/_tag-select.sass
@@ -1,6 +1,11 @@
 .tag-select
   @extend .w-100
 
+.tag-select-container
+  @extend .p-0
+  @extend .bg-transparent
+  @extend .border-0
+
 .tag-select-input
   @extend .bg-light-gray
   @extend .rounded-0
@@ -17,3 +22,13 @@
   @extend .border-left-0
   @extend .border-top-0
   @extend .border-right-0
+
+.tag-select-tags-container
+  @include fixed-height(75)
+  @extend .w-100
+  @extend .d-inline-block
+  @extend .overflow-auto
+  @extend .p-2
+  @extend .bg-light-gray
+  @extend .border-secondary
+  @extend .border-bottom
