--- a/dl4se-website/src/assets/styles/component/_text-input-form.sass
+++ b/dl4se-website/src/assets/styles/component/_text-input-form.sass
@@ -14,6 +14,9 @@
   @extend .mx-auto
   @extend .text-left
 
+.text-input-icon
+  color: $dark-red
+
 .text-input-field
   @extend .form-control
   @extend .bg-light-gray
