Improved invalid feedback rendering: now uses HTML lists

--- a/dl4se-website/src/assets/styles/component/_text-input-form.sass
+++ b/dl4se-website/src/assets/styles/component/_text-input-form.sass
@@ -17,6 +17,10 @@
 .text-input-icon
   color: $dark-red
 
+.text-input-feedback
+  @extend .m-0
+  list-style: none
+
 .text-input-field
   @extend .form-control
   @extend .bg-light-gray
