Extended `:disabled` to `.disabled`

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -24,8 +24,8 @@ body
   font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif
   min-height: 100vh
 
-\:disabled
-  cursor: not-allowed
+\:disabled, .disabled
+  cursor: not-allowed!important
   pointer-events: all!important
 
 .bg-light-gray
