Added `PaginatedTable` component

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -2,6 +2,7 @@
 @import "component/tag-select"
 @import "component/dialog"
 @import "component/masking"
+@import "component/paginated-table"
 @import "component/range"
 @import "component/task"
 @import "component/text-input-form"
