Added css overrides for `pagination` and `table`

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -2,6 +2,8 @@
 @import "override/custom-control-input"
 @import "override/dropdown"
 @import "override/input"
+@import "override/pagination"
 @import "override/scroll"
+@import "override/table"
 @import "override/validation"
 @import "override/vue"
