Replaced overrides with dedicated component CSS for `DropdownSelect`

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,6 +1,7 @@
 @import "component/counter"
 @import "component/tag-select"
 @import "component/dialog"
+@import "component/dropdown-select"
 @import "component/masking"
 @import "component/range"
 @import "component/task"
