`DropdownSelect` menu now has border radius set to 0 despite override

--- a/dl4se-website/src/assets/styles/component/_dropdown-select.sass
+++ b/dl4se-website/src/assets/styles/component/_dropdown-select.sass
@@ -22,6 +22,9 @@
 .dropdown-select-toggle:hover, .dropdown-select-toggle.disabled, .show > .dropdown-select-toggle
   @include bg-chevron-down($white)
 
+.dropdown-select-menu
+  border-radius: 0!important
+
 .dropdown-select-item:active, .dropdown-select-item.active
   color: $white
   background-color: $normal-gray
