Added `SmartNavbar` component
A more robust wrapper for Bootstrap's Navbar component. It's content
changes based on what type of page it is currently located, namely
public and private pages. It is hidden on the `HomeView`.

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,8 +1,9 @@
 @import "component/counter"
-@import "component/tag-select"
 @import "component/dialog"
 @import "component/dropdown-select"
 @import "component/masking"
 @import "component/range"
+@import "component/smart-navbar"
+@import "component/tag-select"
 @import "component/task"
 @import "component/text-input-form"
