--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -2,6 +2,7 @@
 @import "override/custom-control-input"
 @import "override/dropdown"
 @import "override/input"
+@import "override/navbar-toggle"
 @import "override/scroll"
 @import "override/validation"
 @import "override/vue"
