--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -5,5 +5,6 @@
 @import "override/pagination"
 @import "override/scroll"
 @import "override/table"
+@import "override/tooltip"
 @import "override/validation"
 @import "override/vue"
