Moved `min-height` style attribute from `body` to `html`

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -19,10 +19,12 @@ $enable-responsive-font-sizes: true
   padding: 0
   box-sizing: border-box
 
+html
+  min-height: 100vh
+
 body
   color: black
   font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif
-  min-height: 100vh
 
 \:disabled
   cursor: not-allowed
