Wrapped entire form of `TaskCreateView` into another div with margins

--- a/dl4se-website/src/assets/styles/component/_task.sass
+++ b/dl4se-website/src/assets/styles/component/_task.sass
@@ -1,3 +1,9 @@
+.task-form
+  @extend .my-lg-5
+  @extend .my-md-4
+  @extend .my-sm-3
+  @extend .my-3
+
 %task-form-section
   background-color: #f2f2f2ee!important
   @extend .border-left
