Added styling for footer so that it sticks to the bottom of the page
It wil work both in cases when there is both no content on the page, and
when the content is lengthy (scrollable). Not implemented in the
cleanest manner, but it does the trick.

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -20,11 +20,20 @@ $enable-responsive-font-sizes: true
   box-sizing: border-box
 
 html
+  position: relative
   min-height: 100vh
 
 body
   color: black
   font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif
+
+@include media-breakpoint-up(xs)
+  main
+    padding-bottom: 160px
+
+@include media-breakpoint-up(md)
+  main
+    padding-bottom: 40px
 
 \:disabled
   cursor: not-allowed
