Added manual refresh button to `PaginatedTable`

--- a/dl4se-website/src/assets/styles/component/_paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/_paginated-table.sass
@@ -18,3 +18,16 @@
 .paginated-table .paginated-table-header-row th,
 .paginated-table .paginated-table-row td
   vertical-align: middle!important
+
+.paginated-table-refresh
+  @include fixed-width(40)
+  @include fixed-height(40)
+  @extend .mb-3
+  @extend .btn
+  @extend .btn-outline-secondary
+  @extend .bg-light-gray
+  @extend .border-secondary
+  @extend .border-left-0
+  @extend .border-top-0
+  @extend .border-right-0
+  @extend .rounded-0
