Fixed responsiveness of `PaginatedTable` controls, better for mobile

--- a/dl4se-website/src/assets/styles/component/_paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/_paginated-table.sass
@@ -4,10 +4,7 @@
   position: sticky!important
 
 .paginated-table-controls
-  @extend .w-100
-  @extend .d-block
-  @extend .d-sm-inline-flex
-  @extend .justify-content-center
+  @extend .p-0
 
 .paginated-table .paginated-table-header-row
   height: 50px!important
