Minor override for `progress` component
This component will be used in the new task table

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -3,6 +3,7 @@
 @import "override/dropdown"
 @import "override/input"
 @import "override/pagination"
+@import "override/progress"
 @import "override/scroll"
 @import "override/table"
 @import "override/tooltip"
