Added bottom border to `PaginatedTable`

--- a/dl4se-website/src/assets/styles/component/_paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/_paginated-table.sass
@@ -28,3 +28,10 @@
   @extend .border-top-0
   @extend .border-right-0
   @extend .rounded-0
+
+.paginated-table-border
+  @extend .border-secondary
+  @extend .border-bottom
+  @extend .border-left-0
+  @extend .border-top-0
+  @extend .border-right-0
