Added margins to `router-view`

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -66,6 +66,12 @@ body
   @extend .px-sm-3
   @extend .px-3
 
+.router-view
+  @extend .my-lg-5
+  @extend .my-md-4
+  @extend .my-sm-3
+  @extend .my-3
+
 .logo-image
   @extend .my-md-5
   @extend .my-sm-3
