Added a `controls` slot to `PaginatedTable`
This slot will allow custom controls to be placed next to the table's
pagination controls. For now, only the task table contains an additional
button for navigating to the task create view.

--- a/dl4se-website/src/assets/styles/component/_paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/_paginated-table.sass
@@ -16,8 +16,7 @@
 .paginated-table .paginated-table-row td
   vertical-align: middle!important
 
-.paginated-table-refresh
-  @include fixed-width(40)
+.paginated-table-btn
   @include fixed-height(40)
   @extend .mb-3
   @extend .btn
@@ -28,6 +27,10 @@
   @extend .border-top-0
   @extend .border-right-0
   @extend .rounded-0
+
+.paginated-table-refresh
+  @include fixed-width(40)
+  @extend .paginated-table-btn
 
 .paginated-table-border
   @extend .border-secondary
