Overriding `disabled` style for `page-item.active`

--- a/dl4se-website/src/assets/styles/override/_pagination.sass
+++ b/dl4se-website/src/assets/styles/override/_pagination.sass
@@ -26,3 +26,7 @@
 
 .page-item.active .page-link
   background-color: $normal-gray
+
+.page-item.active.disabled .page-link
+  color: rgb(255 255 255 / 50%)
+  background-color: rgb(108 117 125 / 50%)
