Added `AboutView` skeleton

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -62,6 +62,12 @@ body
   @extend .px-sm-3
   @extend .px-3
 
+.page-section
+  @extend .m-lg-5
+  @extend .m-md-4
+  @extend .m-sm-3
+  @extend .m-3
+
 .router-view
   @extend .my-lg-5
   @extend .my-md-4
