Added override for hovered link elements for `text-secondary`

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -8,6 +8,7 @@
 @import "override/progress"
 @import "override/scroll"
 @import "override/table"
+@import "override/text-secondary"
 @import "override/tooltip"
 @import "override/validation"
 @import "override/vue"
