--- a/dl4se-website/src/assets/styles/override/_text-secondary.sass
+++ b/dl4se-website/src/assets/styles/override/_text-secondary.sass
@@ -1,5 +1,4 @@
-a.text-secondary:hover:disabled,
-a.text-secondary:focus:disabled,
-a.text-secondary:hover.disabled,
-a.text-secondary:focus.disabled
+a.text-secondary:disabled,
+a.text-secondary.disabled
   color: #6c757d !important
+  opacity: 0.65  !important
