Added dedicated `DetailsModal` component
Separated from the `DashboardView` into a unique component. Mostly the
same, but contains some minor alterations to account for its
independence.

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,5 +1,6 @@
 @import "component/confirm-modal"
 @import "component/counter"
+@import "component/details-modal"
 @import "component/dialog"
 @import "component/dropdown-select"
 @import "component/footer"
