Improved styling for no results in `PaginatedTable`

--- a/dl4se-website/src/assets/styles/component/_paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/_paginated-table.sass
@@ -3,6 +3,10 @@
 .paginated-table-header tr th
   position: sticky!important
 
+.paginated-table-body .b-table-empty-row
+  color: $black
+  background-color: $light-gray
+
 .paginated-table-controls
   @extend .p-0
 
