Copied parts of the report into the `about` section

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -68,6 +68,14 @@ body
   @extend .m-sm-3
   @extend .m-3
 
+.page-text
+  @extend .text-justify
+
+.page-list-item
+  margin-left: 25px!important
+  @extend .mb-2
+
+
 .router-view
   @extend .my-lg-5
   @extend .my-md-4
