Added new style classes for `TextInputForm` component

--- a/dl4se-website/src/assets/styles/component/_text-input-form.sass
+++ b/dl4se-website/src/assets/styles/component/_text-input-form.sass
@@ -5,6 +5,26 @@
   @extend .m-sm-3
   @extend .m-3
 
+%text-input-group
+  @extend .col-xl-3
+  @extend .col-lg-4
+  @extend .col-md-5
+  @extend .col-sm-6
+  @extend .col-12
+  @extend .mx-auto
+
+.text-input-group-left
+  @extend %text-input-group
+  @extend .text-left
+
+.text-input-group-center
+  @extend %text-input-group
+  @extend .text-center
+
+.text-input-group-right
+  @extend %text-input-group
+  @extend .text-right
+
 .text-input-group
   @extend .col-xl-3
   @extend .col-lg-4
