Added monospaced `Inconsolata` font

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -14,6 +14,12 @@ $enable-responsive-font-sizes: true
   font-weight: normal
   src: local('Trebuchet MS'), url('@/assets/fonts/trebuc.woff') format('woff')
 
+@font-face
+  font-family: 'Inconsolata'
+  font-style: normal
+  font-weight: normal
+  src: local('Inconsolata'), url('@/assets/fonts/inconsolata.woff') format('woff')
+
 *
   margin: 0
   padding: 0
