Horizontal scrollbar height now matches vertical scrollbar width

--- a/dl4se-website/src/assets/styles/override/_scroll.sass
+++ b/dl4se-website/src/assets/styles/override/_scroll.sass
@@ -1,5 +1,6 @@
 ::-webkit-scrollbar
   @include fixed-width(10)
+  @include fixed-height(10)
 
 ::-webkit-scrollbar-track
   background: $light-gray
