Added `Monitor` component
As the name suggests, provides a read-only display of information
produced by an asynchronous String supplier. The component offers on-
demand content refresh as well as a content download functionality.

--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -5,6 +5,7 @@
 @import "component/dropdown-select"
 @import "component/footer"
 @import "component/masking"
+@import "component/monitor"
 @import "component/paginated-table"
 @import "component/range"
 @import "component/smart-navbar"
