Fonts now separated into classes

--- a/dl4se-website/src/assets/styles/component/_monitor.sass
+++ b/dl4se-website/src/assets/styles/component/_monitor.sass
@@ -1,8 +1,7 @@
 .monitor-textarea
   white-space: pre
   overflow: scroll
-  color: black
-  font-family: 'Inconsolata', Helvetica, Arial, sans-serif
+  @extend .text-monospace
   @extend .mb-3
   @extend .bg-light-gray
   @extend .border-secondary
