--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -30,8 +30,7 @@ html
   min-height: 100vh
 
 body
-  color: black
-  font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif
+  @extend .text-regular
 
 @include media-breakpoint-up(xs)
   main
@@ -82,6 +81,13 @@ body
   margin-left: 25px!important
   @extend .mb-2
 
+.text-regular
+  color: black
+  font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif
+
+.text-monospace
+  color: black
+  font-family: 'Inconsolata', Helvetica, Arial, sans-serif
 
 .router-view
   @extend .my-lg-5
