better naming for the existing `action-btn` class

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -44,12 +44,19 @@ body
 .bg-light-gray
   background-color: $light-gray
 
-.action-btn
+.btn-secondary-border-2
   @extend .btn
   @extend .btn-secondary
-  @extend .border-2
-  @extend .border-dark
   @extend .text-center
+  @extend .border-2
+  border-color: $dark-gray!important
+
+.btn-danger-border-2
+  @extend .btn
+  @extend .btn-danger
+  @extend .text-center
+  @extend .border-2
+  border-color: $dark-red!important
 
 .page-title
   @extend .text-center
