--- a/dl4se-website/src/assets/styles/_component.sass
+++ b/dl4se-website/src/assets/styles/_component.sass
@@ -1,3 +1,4 @@
+@import "component/bar-chart"
 @import "component/config-table"
 @import "component/confirm-modal"
 @import "component/content-area"
