Minor style override for Bootstrap Vue skeleton components

--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -7,6 +7,7 @@
 @import "override/pagination"
 @import "override/progress"
 @import "override/scroll"
+@import "override/skeleton"
 @import "override/table"
 @import "override/text-secondary"
 @import "override/tooltip"
