Export file size is now included in the task email notification

--- a/dl4se-server/src/main/resources/templates/task_notification.html
+++ b/dl4se-server/src/main/resources/templates/task_notification.html
@@ -32,6 +32,10 @@
         <td class="tg-4lcc">Results</td>
         <td class="tg-qxrv" th:text="${results}"/>
     </tr>
+    <tr th:if="${size != null}">
+        <td class="tg-4lcc">Size</td>
+        <td class="tg-qxrv" th:text="${size}"/>
+    </tr>
     </tbody>
 </table>
 </body>
