Changed how branding works for the `SmartNavbar`
Now uses slots for the branding instead of a simple prop.

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -58,6 +58,20 @@ body
   @extend .border-2
   border-color: $dark-red!important
 
+.brand
+  font-size: 1.65rem
+
+.brand-negative
+  color: $light-gray
+  background-color: $dark-gray
+  padding-left: 1rem
+  padding-right: 0.25rem
+
+.brand-positive
+  color: $dark-gray
+  padding-left: 2px
+  font-weight: 200
+
 .page-title
   @extend .text-center
   @extend .m-lg-5
