Branding now acts as a home link

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -59,18 +59,19 @@ body
   border-color: $dark-red!important
 
 .brand
-  font-size: 1.65rem
+  font-size: 1.65rem!important
+  text-decoration: none!important
 
 .brand-negative
-  color: $light-gray
-  background-color: $dark-gray
-  padding-left: 1rem
-  padding-right: 0.25rem
+  color: $light-gray!important
+  background-color: $dark-gray!important
+  padding-left: 1rem!important
+  padding-right: 0.25rem!important
 
 .brand-positive
-  color: $dark-gray
-  padding-left: 2px
-  font-weight: 200
+  color: $dark-gray!important
+  padding-left: 2px!important
+  font-weight: 200!important
 
 .page-title
   @extend .text-center
