Added more styling for brand display

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -73,6 +73,18 @@ body
   padding-left: 2px!important
   font-weight: 200!important
 
+.brand:hover > .brand-negative,
+.brand:focus > .brand-negative,
+.brand:active > .brand-negative,
+.brand.active > .brand-negative
+  background-color: $black!important
+
+.brand:hover > .brand-positive,
+.brand:focus > .brand-positive,
+.brand:active > .brand-positive,
+.brand.active > .brand-positive
+  color: $black!important
+
 .page-title
   @extend .text-center
   @extend .m-lg-5
